--- a/src/components/navigation/nav.component.sass
+++ b/src/components/navigation/nav.component.sass
@@ -1,6 +1,7 @@
-@import "../../styles/colors.sass";
+@import "../../styles/colors.sass"
 
 .ms-Nav-link a
     text-decoration: none
+    color: $link-color
     &:visited
         color: $link-color
