--- a/src/components/navigation/nav.component.sass
+++ b/src/components/navigation/nav.component.sass
@@ -5,3 +5,16 @@
     color: $link-color
     &:visited
         color: $link-color
+
+.badge
+    line-height: 15px
+    display: initial
+    margin-left: 5px
+    color: #fff
+    padding: 0px 7px
+    border-radius: 7px
+    background-color: #0078d4
+    font-size: 10px
+
+.ms-Nav-compositeLink
+    font-size: 12px
